Nioh1/Section_1/Section1_Index.css
/* 
Styling Sheet for Section1_Index.html 
*/


#title_text {
    margin-left: 22em;
    padding-top: 0.25em;
}

.btn-group {
    text-align: center;
    font-size: 16px;
    margin-right: 0.10em;
    margin-left: 0.10em;
    margin-top: 0.10em;
}

#complete_button_group {
    margin-top: 25em;
}

#complete_button_group_2 {
    margin-top: 0.75em;
}

